registration and new policy form

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@
 # ACCESSTOK='umV9rMJ-WJ_3rdzLmVmEVefbax1A1hOeKxjpmXWxwfw'
 # SUBKEY='b1e0d4a1aee349a6b0ff33a0f9c9f504'
 
-# Credentials for geominat
-ACCESSTOK='a-4WwQXdyXyiqq_r8Aid8sO80KH4guntPOQ9NbuJNAc'
+# Credentials for geominat -> Acme Insurance
+ACCESSTOK='nS_TINdWp8plTxidUINsfGQgqvaXld4Zs5u4B7eGp_I'
 SUBKEY='ee7f6d2cdbef4412bc25269887d89636'
 
 #URL for ngrok tunnel service
@@ -16,6 +16,7 @@ NGROK_URL='https://ed38313b5bc0.ngrok.io'
 # ------------- Credential Definitions ----------------- #
 # this is for emerysolutions100
 # CRED_DEF_ID_USER_DETAILS='Q3HKJyAxiErFyrKqYkBJ9a:3:CL:114201:default'
+# CRED_DEF_ID_USER_DETAILS='6Efq6oicc4PC3ZsVhkay4A:3:CL:137182:default'
 
 # CRED_DEF_ID_EBAY='Q3HKJyAxiErFyrKqYkBJ9a:3:CL:111712:default'
 
@@ -34,34 +35,10 @@ NGROK_URL='https://ed38313b5bc0.ngrok.io'
 
 
 # this is for user details geominat
-CRED_DEF_ID_USER_DETAILS='7fCD83fnbp6cYMec9Pvg8x:3:CL:119388:default'
+CRED_DEF_ID_USER_DETAILS='6Efq6oicc4PC3ZsVhkay4A:3:CL:137182:default'
 
-CRED_DEF_ID_EBAY='7fCD83fnbp6cYMec9Pvg8x:3:CL:119405:default'
-
-CRED_DEF_ID_ETSY='7fCD83fnbp6cYMec9Pvg8x:3:CL:119410:default'
-
-CRED_DEF_ID_UBER='7fCD83fnbp6cYMec9Pvg8x:3:CL:119414:default'
+POLICY_ID='6Efq6oicc4PC3ZsVhkay4A:3:CL:137365:default'
 
 LOGIN_VERIF_ID='c6fa7368-4e72-461a-8f5f-08d823333cea'
 
-
-
-# eBay Client ID
-EBAY_CLIENT_ID='MikeRich-EuroLedg-PRD-f193ff38b-ecdaff89'
-
-# eBay Developer ID
-EBAY_DEV_ID='5ac3b11b-0734-4a47-a382-726a92d7a7aa'
-
-#eBay Client Secret
-# EBAY_CLIENT_SECRET='PRD-193ff38bb57e-c123-43e7-ac39-b145'
-
-EBAY_CLIENT_SECRET='PRD-6e59290aece2-897c-4db0-b21a-27e5'
-
-# etsy APP NAME
-
-ETSY_APP_NAME='EuroLedger'
-
-ETSY_KEYSTRING = 'eitzeighv7mepupi3zryttvt'
-
-ETSY_SHARED_SECRET = 'pfkwsznp9q'
 
