--- a/insurance/package.json
+++ b/insurance/package.json
@@ -64,6 +64,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "proxy": "https://localhost:3002"
+    "proxy": "http://localhost:3002"
   }
 }
