--- a/hospital/.env
+++ b/hospital/.env
@@ -1,17 +1,17 @@
 
 
 # Credentials for geominat -> Acme Insurance
-ACCESSTOK='GZszWhnk-P_HvCTcXgK4VcCwCmrpSnxa2FEliMepu0E'
-SUBKEY='ee7f6d2cdbef4412bc25269887d89636'
+ACCESSTOK=
+SUBKEY=
 
 #URL for ngrok tunnel service
-NGROK_URL='http://d244aa0a13ac.ngrok.io'
+NGROK_URL=
 
 # this is for user details geominat
-CRED_DEF_ID_USER_DETAILS='E4At6q7esbjKtNNXGA9QiM:3:CL:138058:default'
+CRED_DEF_ID_USER_DETAILS=
 
-INVOICE_ID='E4At6q7esbjKtNNXGA9QiM:3:CL:138062:default'
+INVOICE_ID=
 
-LOGIN_VERIF_ID='c6fa7368-4e72-461a-8f5f-08d823333cea'
+LOGIN_VERIF_ID=
 
-PROOF_OF_INSURANCE_ID='d8f4edfc-dffd-4dbd-416d-08d847ea6518'
+PROOF_OF_INSURANCE_ID=
