--- a/insurance/.env
+++ b/insurance/.env
@@ -1,17 +1,17 @@
 
 
 # Credentials for geominat -> Acme Insurance
-ACCESSTOK='nS_TINdWp8plTxidUINsfGQgqvaXld4Zs5u4B7eGp_I'
-SUBKEY='ee7f6d2cdbef4412bc25269887d89636'
+ACCESSTOK=
+SUBKEY=
 
 #URL for ngrok tunnel service
-NGROK_URL='https://b2ad9e5ffb47.ngrok.io'
+NGROK_URL=
 
 # this is for user details geominat
-CRED_DEF_ID_USER_DETAILS='6Efq6oicc4PC3ZsVhkay4A:3:CL:137182:default'
+CRED_DEF_ID_USER_DETAILS=
 
-POLICY_ID='6Efq6oicc4PC3ZsVhkay4A:3:CL:138052:default'
+POLICY_ID=
 
-LOGIN_VERIF_ID='c6fa7368-4e72-461a-8f5f-08d823333cea'
+LOGIN_VERIF_ID=
 
 
